[package]
name = "schultz"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "The Schultz node - a handshake peer aware of its own identity"

[dependencies]
datasize = { version = "0.2.11", features = ["detailed", "fake_clock-types", "futures-types", "smallvec-types"] }
tokio = { version = "1.37.0", features = ["macros", "net", "rt-multi-thread", "sync", "time", "full"] }
tokio-util = { version = "0.6.4", features = ["codec"] }
tokio-serde = { version = "0.8.0", features = ["bincode"] }
serde = { version = "1.0.214", features = ["derive", "rc"] }
serde-big-array = "0.3.0"
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
futures = "0.3.5"
bincode = "1.3.3"
rand = "0.8.5"
rmp-serde = "0.14.4"
openssl = "0.10.55"
tokio-openssl = "0.6.1"
k256 = "0.13.1"
ed25519-dalek = "2.0.0"
casper-types = "4.0.2"
casper-hashing = "3.0.0"
clap = { version = "4.5.20",  features = ["derive", "env"] } 
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1"
toml = "0.5.6"
num = { version = "0.4.0", features = ["serde"] }
bytes = "1.4.0"
uint = "0.9.0"
hex_fmt = "0.3.0"
base16 = "0.2.1"
base64 = "0.13.0"
directories = "5.0.1"
tracing = "0.1.40"
tracing-indicatif = "0.3.5"
tracing-subscriber = "0.3.17"

[[bin]]
name = "schultz"
